src/index.css
/* ... */
.cart-highlight {
  background-color: var(--accent-1);
  color: white;
}

.pay-form {
  padding-top: 30px;
}

@media (max-width: 700px) {
  .home-layout,
  .about-layout,
  .products-grid,
  .product-details-layout {
    grid-template-columns: 1fr;
  }
  .home-image {
    order: -1;
  }
  .containerMedia {
    width: 100%;
    max-width: 100%;
    margin: 0 auto;
    padding: 0;
  }
  .navbar {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    overflow: hidden;
  }
  .nav-brand {
    font-size: 1.5rem;
    margin-bottom: 1rem;
  }
  .navbarMedia {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    padding: 0;
  }
  .navbarMedia li {
    display: block;
    width: 100%;
    text-align: center;
    margin: 0;
    padding: 0;
  }
  .nav-item {
    font-size: 1rem;
    margin: 0;
  }
  .nav-cart {
    margin-top: 1px;
    font-size: 1.1rem;
    padding: 1px 5px;
  }
}

/* Loader */
.spinner {
  animation: rotator 1.4s linear infinite;
}

@keyframes rotator {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(270deg);
  }
}
.path {
  stroke-dasharray: 187;
  stroke-dashoffset: 0;
  transform-origin: center;
  animation:
    dash 1.4s ease-in-out infinite,
    colors 5.6s ease-in-out infinite;
}

@keyframes colors {
  0% {
    stroke: #4285f4;
  }
  25% {
    stroke: #de3e35;
  }
  50% {
    stroke: #f7c223;
  }
  75% {
    stroke: #1b9a59;
  }
  100% {
    stroke: #4285f4;
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 187;
  }
  50% {
    stroke-dashoffset: 46.75;
    transform: rotate(135deg);
  }
  100% {
    stroke-dashoffset: 187;
    transform: rotate(450deg);
  }
}

/* Profile page styles */
.profile-page {
  background-color: var(--neutral-1);
  box-shadow:
    0px 3px 7px 1px rgba(255, 255, 255, 0.07),
    0px 6px 13px 1px rgba(255, 255, 255, 0.07),
    0px -6px 13px 1px rgba(255, 255, 255, 0.07),
    0px -3px 7px 1px rgba(255, 255, 255, 0.07);
  padding: 30px;
  overflow: hidden;
}

.profile-header h1 {
  font-size: 2.3em;
  color: var(--neutral-1);
  font-weight: 500;
  margin-bottom: 20px;
}

.profile-main {
  font-size: 1.1rem;
  line-height: 1.6;
  color: var(--neutral-2);
}

.profile-intro {
  background-color: #ffffff;
  padding: 25px 30px;
  border-radius: 10px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  max-width: 800px;
}

.profile-intro strong {
  color: var(--neutral-1);
}

.profile-intro ul {
  list-style-type: disc;
  padding-left: 20px;
}

.profile-intro ul li {
  margin-bottom: 10px;
}

.profile-headerC h1 {
  display: flex;
  flex-direction: column;
  text-align: center;
  font-size: 2.3rem;
  font-weight: 500;
  margin-bottom: 20px;
}

.profile-mainC {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.contact-details {
  margin-top: 25px;
  background-color: #ffffff;
  padding: 70px 140px;
  border-radius: 10px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  text-align: center;
  font-size: 1.1rem;
  color: var(--neutral-2);
}

.contact-details p {
  margin: 10px 0;
}

.contact-details a {
  color: var(--primary-2);
  text-decoration: none;
}

.contact-details a:hover {
  text-decoration: underline;
}

.profile-containerM {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: var(--neutral-1);
  min-height: calc(100vh - 249px);
  padding: 50px 25px 40px 25px;
  overflow: hidden;
  font-family: "Roboto", sans-serif, system-ui;
}

.profile-containerA {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: var(--neutral-5);
  margin: 0 auto;
  padding: 35px 50px;
  min-height: 100vh;
  overflow: hidden;
  font-family: "Roboto", sans-serif, system-ui;
}

.profile-containerC {
  display: flex;
  flex-direction: column;
  background-color: var(--neutral-5);
  margin: 0 auto;
  padding: 35px 50px;
  min-height: calc(100vh - 229px);
  font-family: "Roboto", sans-serif, system-ui;
}

.profile-containerP {
  display: flex;
  flex-direction: column;
  background-color: var(--neutral-5);
  margin: 0 auto;
  padding: 35px 50px;
  min-height: 100vh;
  overflow: hidden;
  font-family: "Roboto", sans-serif, system-ui;
}

.headerP {
  text-align: right;
  font-size: 2rem;
  margin-bottom: 85px;
}

.containerMain {
  display: flex;
  flex-direction: column;
  gap: 100px;
}

.containerMain section {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 50px;
  padding: 20px;
  border-radius: 10px;
  background-color: #ffffff;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}

.containerMain img {
  width: 100%;
  max-width: 485px;
  border-radius: 10px;
  border: 1px solid #c3bfbf;
}

.containerMain p {
  flex: 1;
  padding: 20px;
  margin: 0;
  font-size: 1.1rem;
  line-height: 2;
}

.appbutton {
  display: flex;
  align-self: center;
  font-size: 20px;
  margin-bottom: 50px;
}

.appbutton:hover a {
  text-decoration: none;
}

.containerL {
  flex: 1;
  max-width: 700px;
  margin-right: 120px;
}

.containerImg {
  display: flex;
  align-items: center;
  gap: 20px;
}

.imageshadow {
  filter: drop-shadow(1px 6.5px 3.5px rgba(255, 255, 255, 0.25));
  transition: filter 0.05s ease-in-out;
}

.imageshadow:hover {
  filter: drop-shadow(0px 10px 4.5px rgba(96, 247, 255, 0.482));
}

@keyframes float {
  0% {
    transform: translatey(0px);
  }
  50% {
    transform: translatey(-3px);
  }
  100% {
    transform: translatey(0px);
  }
}

.containerImg img {
  animation: float 5s ease infinite;
}

.containerR {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding-top: 30px;
  margin-left: 30px;
}

.containerTR {
  color: white;
  display: flex;
}

.containerTR p {
  font-size: 15px;
  margin-bottom: 5px;
}

.containerTR img {
  padding: 28px 0px 5px 10px;
}

.containerBR {
  position: relative;
  display: inline-block;
  border-radius: 10px;
  z-index: 100;
  margin-top: 5px;
}
/* ... */

